--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Enjoy javascript
-subtitle: There is no royal road to learning.
+subtitle: 为者常成，行者常至
 description:
 author: nanc
 language: 
