--- a/_config.yml
+++ b/_config.yml
@@ -71,4 +71,4 @@ deploy:
       type: git
       repo: 
             githubnc: git@github.com:jserNc/jserNc.github.io.git,master
-            githubzx: git@github.com:myzixuan/myzixuan.github.io.git,master
+            githubzx: git@github-zx:myzixuan/myzixuan.github.io.git,master
