refactor:(_config.yml) 提交地址git@github.com修改为https://github.com

--- a/_config.yml
+++ b/_config.yml
@@ -70,5 +70,5 @@ theme: cyanstyle
 deploy:
       type: git
       repo:
-            githubnc: git@github.com:jserNc/jserNc.github.io.git,master
+            githubnc: https://github.com/jserNc/jserNc.github.io.git,master
             #githubzx: git@github-zx:myzixuan/myzixuan.github.io.git,master
